8282555: Missing memory edge when spilling MoveF2I, MoveD2L etc